<resources>
    <string name="app_name">Contoh Button</string>

    <string name="merah">Merah</string>
    <string name="biru">Biru</string>
    <string name="hijau">Hijau</string>
    <string name="oranye">Orannye</string>
    <string name="ungu">Ungu</string>
    <string name="hitam">Hitam</string>

    <style name="ButtonText">
    <item name="android:layout_width">fill_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#ffffff</item>
    <item name="android:gravity">center</item>
    <item name="android:layout_margin">3dp</item>
    <item name="android:textSize">30dp</item>
    <item name="android:textStyle">bold</item>
    <item name="android:shadowColor">#000000</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">2</item>
    </style>


</resources>
